fix header component z-index

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -6,6 +6,8 @@
   top: calc(90px - 94vh);
   left: 0;
   right: 0;
+
+  z-index: 2;
   
   transition: top 600ms ease-in-out;
   
